# udg_pandora

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  manifest.xml  package.xml
action/: ValveTurning.action
config/: adapter_omega7.yaml  g500.rviz.vcg  learning_dmp.yaml  learning_dmp_arm.yaml  learning_dmp_auv.yaml  learning_dmp_complete.yaml  learning_dmp_complete_v2.yaml  learning_record.yaml  learning_record_arm.yaml  learning_record_auv.yaml  learning_record_complete.yaml  learning_record_force.yaml  learning_reproductor.yaml  learning_reproductor_action.yaml  learning_reproductor_arm.yaml  learning_reproductor_auv.yaml  learning_reproductor_complete.yaml  learning_reproductor_force.yaml  learning_reproductor_ori.yaml  learning_reproductor_pose.yaml  phdmapper.yaml  phdslam.yaml  slam_feature_detector.yaml  triton_visual_detector.yaml  valve_tracker.yaml  visual_detector.yaml  visual_detector_ee.yaml  visual_detector_test.yaml  work_area_controller.yaml
data2/objects2/: chain.osg  cube.osg  land_obj.osg  new_panel2.osg  panel.osg.bz2  panel2.osg  stone1.osg  stone2.osg  tube.osg  valve.osg.bz2
data2/terrain2/: cirs.osg.bz2  cirs_trident.osg.bz2  land.osg
launch/: chain_cleanning_udg.launch  profiler.launch  start_g500-sim-Pandora.launch  valve_tracker.launch  valve_turning_udg.launch
learning_data/: learned_data_complete_individual_long.txt  learned_data_complete_individual_long_backup.txt  learned_data_complete_individual_long_sim.txt  learned_data_complete_individual_short.txt
learning_pandora/: CMakeLists.txt  package.xml
learning_pandora/action/: ValveTurning.action
learning_pandora/config/: learning_dmp_complete_v2.yaml  learning_dmp_complete_v3.yaml  learning_record_complete.yaml  learning_reproductor_action.yaml  learning_reproductor_action_v3.yaml
learning_pandora/learning_data/: learned_data_complete_individual_long.txt  learned_data_complete_individual_long_real.txt  printDemoAndReproRos.m  (+1 more)
meta_data/: acoustic_detector_meta_data.yaml  feature_detector.yaml  phdslam.yaml  visual_detector_meta_data.yaml
msg/: BoxCorners.msg  Detection.msg  Point2DMatched.msg  ValveTurningAction.msg  ValveTurningActionFeedback.msg  ValveTurningActionGoal.msg  ValveTurningActionResult.msg  ValveTurningFeedback.msg  ValveTurningGoal.msg  ValveTurningResult.msg  omega7State.msg  rfdm_msg.msg
planning_msgs/: CMakeLists.txt  package.xml
scenes/: cirsPandora.xml  g500ARMPandora.urdf  g500ARMPandora.xml  g500ARMPandora2.urdf  g500ARMPandora_backUp.urdf  g500ARMPandora_iit.urdf  g500Test.urdf  pandoraLand.xml  pandoraLand_nostereo.xml  pandoraProfiler.xml  testPoseEKFSLAM.xml  valvePanel.urdf
src/: acoustic_detector.py  adapter_omega7.py  automatic_valve_turning.py  chain_follow.py  chain_planner.py  cvbridge_wrapper.py  detector.py  feature_detector.py  g500slam.py  image_feature_extractor.py  learning_dmp.py  learning_dmp_generic.py  learning_dmp_generic_v2.py  learning_dmp_rpy.py  learning_record.py  learning_record_arm.py  learning_record_auv_traj.py  learning_record_auv_traj_v2.py  learning_record_complete.py  learning_record_complete_v2.py  learning_record_force.py  learning_record_rpy.py  learning_record_uvms.py  learning_record_v2.py  learning_reproductor.py  learning_reproductor_action.py  learning_reproductor_action_v2.py  learning_reproductor_arm.py  learning_reproductor_arm_vel.py  learning_reproductor_auv_traj.py  learning_reproductor_auv_traj_v2.py  learning_reproductor_complete.py  learning_reproductor_complete_v2.py  learning_reproductor_force.py  learning_reproductor_pose.py  learning_reproductor_rpy.py  learning_reproductor_uvms_action.py  learning_reproductor_v2.py  objdetect.py  offline_slam.py  (+11 more)
srv/: WorkAreaError.srv
udg_hierarchical_learning/: CMakeLists.txt  package.xml
udg_pandora/: CMakeLists.txt  package.xml
udg_pandora_chain/: CMakeLists.txt  package.xml
udg_pandora_misc/: CMakeLists.txt  package.xml
udg_pandora_sim/: CMakeLists.txt  Makefile  package.xml
udg_parametric_learning/: CMakeLists.txt  package.xml
udg_planning_interface/: CMakeLists.txt  package.xml
udg_planning_interface/src/: test_udg_planning_interface.py  udg_planning_interface.py
valve_utils_pandora/: CMakeLists.txt  package.xml
(+188 files in other folders)
