<?xml version="1.0"?>
<package>
  <name>udg_planning_interface</name>
  <version>0.0.2</version>
  <description>This package transforms baic Girona 500 AUV capabilities into planning actions that can be called from a PDDL planner</description>

  <maintainer email="npalomer@eia.udg.edu">Narcis</maintainer>
  <license>BSD</license>
  <url type="website">http://bitbucket.org/udg_cirs/udg_pandora</url> -->
  <author email="npalomer@eia.udg.edu">Narcis Palomeras</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>planning_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>cola2_control</build_depend>
  <build_depend>pose_ekf_slam</build_depend>
  <build_depend>learning_pandora</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>planning_msgs</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>cola2_control</run_depend>
  <run_depend>pose_ekf_slam</run_depend>
  <run_depend>learning_pandora</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
